--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Amore 3</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-
+ 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -74,7 +71,7 @@
         <div class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-6 banner-content-colum col-lg-4 col-md-4 d-flex align-items-center">
+                    <div class="col-xl-6 banner-content-colum col-lg-4 col-md-4">
                         <div class="banner-content  wow slideInLeft">
                             <h1>Find Your <br /> Best Match
 
@@ -87,7 +84,7 @@
                             <div class="col-xl-6 col-lg-8 col-md-8">
                                 <div class="banner-img">
 
-                                    <img class="banner-img-main" src="./img/bg/banner.png" />
+                                    <img class="banner-img-main" src="./img/bg/banner.png" alt="" />
 
                                 </div>
 
@@ -108,18 +105,35 @@
             <div class="feature-area">
                 <div class="container p-0">
                     <div class="row feature-row">
-                        <div class="col-xl-4">
+                        <div class="col-xl-4 feature-list-colum">
                             <div class="feature-list">
-                                <span></span>
+                                <img src="./img/icon/user.png" alt="" />
                                 <h3>Choose Partner</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum eu lacinia </p>
+                            </div>
+                        </div>
+						<div class="col-xl-4 feature-list2 feature-list-colum">
+                            <div class="feature-list ">
+                                <img src="./img/icon/love.png" alt="" />
+                                <h3>Enjoy Dating</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum eu lacinia </p>
+								
+                            </div>
+							<img class="arrow1" src="./img/icon/arrow1.png" alt="" />
+							<img class="arrow2" src="./img/icon/arrow2.png" alt="" />
+                        </div>
+						<div class="col-xl-4 feature-list-colum">
+                            <div class="feature-list">
+                                <img src="./img/icon/star.png" alt="" />
+                                <h3>Loyal Relationship</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum eu lacinia </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <img src="./img/feature/shape1.svg" class="feature-shape1" />
-                <img src="./img/feature/shape2.svg" class="feature-shape2" />
-                <img src="./img/feature/shape3.svg" class="feature-shape3" />
+                <img src="./img/feature/shape1.svg" alt="" class="feature-shape1" />
+                <img src="./img/feature/shape2.svg" alt="" class="feature-shape2" />
+                <img src="./img/feature/shape3.svg" alt="" class="feature-shape3" />
             </div>
         </div>
     </section>
@@ -140,7 +154,7 @@
 
                         <h2>We belive in <br/> loyal relationship </h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Felis venenatis, diam sapien ullamcorper.</p>
-                        <a href="#">Join Today</a>
+                        <a href="#">Start your free trial</a>
                     </div>
                 </div>
             </div>
@@ -150,16 +164,16 @@
 
     <!-- Relationship Start -->
     <section class="how-work" id="how-work">
-        <div class="how-work-area">
+        <div class="how-work-area d-flex align-items-center">
             <div class="container how-work-container">
                 <div class="row how-work-row">
 
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center">
                         <div class="how-work-content wow zoomIn" data-wow-duration="2s">
 
-                            <h2>We belive in <br/> loyal relationship </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Felis venenatis, diam sapien ullamcorper.</p>
-                            <a href="#">Join Today</a>
+                            <h2>How The App <br/> will work</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu, tortor ac tellus lobortis enim vestibulum magna ut vel placerat posuere nisl.</p>
+                            <a href="#">Get Started</a>
                         </div>
                     </div>
 
@@ -188,10 +202,40 @@
                             <h3>Standard</h3>
                             <h4>Packages you can have</h4>
                             <ul>
-                                <li><img src="./img/icon/circle-check.png" /><span>Single User Licence</span></li>
-                                <li><img src="./img/icon/circle-check.png" /><span>Single User Licence</span></li>
+                                <li><img src="./img/icon/circle-check.png" alt="" /><span>Single User Licence</span></li>
+                                <li><img src="./img/icon/circle-check.png" alt="" /><span>One month free subscribtion</span></li>
                             </ul>
                             <h5>$50</h5>
+                            <p><a href="#">Subscribe Now</a></p>
+                        </div>
+                    </div>
+
+                </div>
+				<div class="col-xl-4">
+                    <div class="price-list-shadow">
+                        <div class="price-list">
+                            <h3>Basic</h3>
+                            <h4>Packages you can have</h4>
+                            <ul>
+                                <li><img src="./img/icon/circle-check.png"  alt=""/><span>Single User Licence</span></li>
+                                <li><img src="./img/icon/circle-check.png" alt="" /><span>One month free subscribtion</span></li>
+                            </ul>
+                            <h5>$100</h5>
+                            <p><a href="#">Subscribe Now</a></p>
+                        </div>
+                    </div>
+
+                </div>
+				<div class="col-xl-4">
+                    <div class="price-list-shadow">
+                        <div class="price-list">
+                            <h3>Premium</h3>
+                            <h4>Packages you can have</h4>
+                            <ul>
+                                <li><img src="./img/icon/circle-check.png" alt="" /><span>Single User Licence</span></li>
+                                <li><img src="./img/icon/circle-check.png" alt="" /><span>One month free subscribtion</span></li>
+                            </ul>
+                            <h5>$150</h5>
                             <p><a href="#">Subscribe Now</a></p>
                         </div>
                     </div>
@@ -205,16 +249,16 @@
 
     <!-- Relationship Start -->
     <section class="social-work" id="social-work">
-        <div class="social-work-area">
+        <div class="social-work-area d-flex align-items-center">
             <div class="container social-work-container">
                 <div class="row social-work-row">
 
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center">
+                    <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
                         <div class="social-work-content wow zoomIn" data-wow-duration="2s">
 
-                            <h2>We belive in <br/> loyal relationship </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Felis venenatis, diam sapien ullamcorper.</p>
-                            <a href="#">Join Today</a>
+                            <h2>Relationship on <br/> our social network </h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu, tortor ac tellus lobortis enim vestibulum magna ut vel placerat posuere nisl.</p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
 
@@ -223,6 +267,78 @@
         </div>
     </section>
     <!-- How to Work end -->
+
+
+    <!-- Client -->
+    <section class="client-section" id="client">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="client-heading">
+                        <h2>Our Client Say’s </h2>
+                    </div>
+                </div>
+            </div>
+                <div class="client  mt-60">
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                    <div class="client-content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
+                            Interdum aliquet mauris semper
+                                dignissim volutpat nibh bibendum felis. Non cras sit a odio.
+                        </p>
+                        <img src="./img/testimonial/client1.svg" alt="" />
+                        <h2>Floyd Miles</h2>
+                        <h3>Business</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Client -->
 
 
 
@@ -252,115 +368,7 @@
 		</section> -->
     <!-- Live Chat end -->
 
-    <!-- Client Start -->
-    <!-- <section class="client-section" id="testmonial">
-			<div class="container client-container">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="client-heading">
-							<h4>Testimonial</h4>
-							<h2>What our client say </h2>
-						</div>
-					</div>
-				</div>
-				<div class="custom-row wow zoomIn" data-wow-duration="2s"">
-					<div class="client  mt-60">
-						<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-							<div class="client-content">
-								<img src="./img/testimonial/client1.svg" alt="" />
-								<h2>Floyd Miles</h2>
-								<h3>Business</h3>
-								<ul>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-								
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae  id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-							<div class="client-content">
-								<img src="./img/testimonial/client2.svg" alt="" />
-								<h2>Ralph Edwards</h2>
-								<h3>Business</h3>
-								<ul>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-4 col-md-4">
-							<div class="client-content">
-								<img src="./img/testimonial/client1.svg" alt="" />
-								<h2>Annette Black</h2>
-								<h3>HR</h3>
-								<ul>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-									<li><img src="./img/icon/star.svg" alt="" /></li>
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-4 col-md-4">
-							<div class="client-content">
-								<img src="./img/testimonial/client1.svg" alt="" />
-								<h2>Cameron Williamson</h2>
-								<h3>Product Designer</h3>
-								<ul>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-4 col-md-4">
-							<div class="client-content">
-								<img src="./img/testimonial/client2.svg" alt="" />
-								<h2>Cameron Williamson</h2>
-								<h3>Product Designer</h3>
-								<ul>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-						<div class="col-xl-4 col-lg-4 col-md-4">
-							<div class="client-content">
-								<img src="./img/testimonial/client1.svg" alt="" />
-								<h2>Cameron Williamson</h2>
-								<h3>Product Designer</h3>
-								<ul>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-									<li><img src="./img/icon/star-gray.png" alt="" /></li>
-								</ul>
-								<p>Suspendisse tincidunt eget pretium vitae id lacus mauris commodo ornare.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-    <!-- Client end -->
+
 
 
     <!-- Pricing Start -->
@@ -514,26 +522,23 @@
 
 
     <!-- Newsletter Start -->
-    <!-- <section class="newsletter" id="contact">
+    <section class="newsletter" id="contact">
 			<div class="container newsletter-container">
-				<div class="row newsletter-row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-						<div class="newsletter-img wow zoomIn" data-wow-duration="2s">
-							<img src="./img/subscribe/newsletter.svg" alt="" />
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center">
-						<div class="newsletter-content wow zoomIn" data-wow-duration="2s">
-							<h4>Newsletter</h4>
-							<h2>Are you <br /> ready to start !</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas consequat blandit ornare dapibus.</p>
-							<a class="join-today" href="#">Join Today</a>
-							<a class="contact-us" href="#">Contact Us</a>
-						</div>
-					</div>
-				</div>
+                <div class="newsletter-area">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <h3>Stay Tuned !</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                <img class="newsletter-shape" src="./img/subscribe/shape.png" alt=""/>
+                <img class="newsletter-woman" src="./img/subscribe/woman.png" alt=""/>
+                <img class="newsletter-love" src="./img/subscribe/love.png" alt=""/>
+                </div>
 			</div>
-		</section> -->
+		</section>
     <!-- Newsletter end -->
 
 
@@ -611,7 +616,5 @@
     </script>
 
 </body>
-
-</html>
 
 </html>
