--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                 dignissim volutpat nibh bibendum felis. Non cras sit a odio.
                         </p>
                         <img src="./img/testimonial/client1.svg" alt="" />
-                        <h2>Floyd Miles</h2>
+                        <h2>Kristin Watson</h2>
                         <h3>Business</h3>
                     </div>
                     <div class="client-content">
@@ -295,8 +295,8 @@
                                 dignissim volutpat nibh bibendum felis. Non cras sit a odio.
                         </p>
                         <img src="./img/testimonial/client1.svg" alt="" />
-                        <h2>Floyd Miles</h2>
-                        <h3>Business</h3>
+                        <h2>Darrell Steward</h2>
+                        <h3>Product Manager,NY</h3>
                     </div>
                     <div class="client-content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sed et ipsum consequat. 
@@ -304,7 +304,7 @@
                                 dignissim volutpat nibh bibendum felis. Non cras sit a odio.
                         </p>
                         <img src="./img/testimonial/client1.svg" alt="" />
-                        <h2>Floyd Miles</h2>
+                        <h2>Annette Black</h2>
                         <h3>Business</h3>
                     </div>
                     <div class="client-content">
@@ -343,183 +343,6 @@
 
 
 
-    <!-- Live Chat Start -->
-    <!-- <section class="livechat">
-			<div class="container livechat-container">
-				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center">
-						<div class="livechat-content wow zoomIn" data-wow-duration="2s">
-							<h2>Live chat <br /> with groups</h2>
-							<p>A big question I’ve had since I started out in my career is how to become a better designer.</p>
-							<ul class="list-group livechat-item-check">
-								<li><img src="./img/icon/check.png" /><span>Discover New Profiles</span></li>
-								<li><img src="./img/icon/check.png" /><span>Group Chat</span></li>
-								<li><img src="./img/icon/check.png" /><span>Exclusive Security (Full Access)</span></li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-						<div class="livechat-img wow zoomIn" data-wow-duration="2s">
-							<img src="./img/feature/livechat.svg" alt="" />
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-    <!-- Live Chat end -->
-
-
-
-
-    <!-- Pricing Start -->
-    <!-- <section class="price" id="pricing">
-			<div class="container pricing-container">
-				<div class="row">
-					<div class="col-xl-12">
-						<div class="price-heading">
-							<h5>Pricing</h5>
-							<h2>Pick your plan</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-						<div class="price-item wow zoomIn" data-wow-duration="2s">
-							<div class="row">
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-amount">
-										<h2>$6<span>/month</span></h2>
-									</div>
-								</div>
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-icon">
-										<img src="./img/price/start.svg" alt="" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-									<div class="price-item-list">
-										<h6>All Monthly Plans Incluide</h6>
-										<ul>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>3 Marketplaces</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Resizer & Editor</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Hosting</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Inventory Page</span>
-											</li>
-										</ul>
-										<p class="price-subscribe-btn">
-											<a href="#">Subscribe Now</a>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-						<div class="price-item wow zoomIn" data-wow-duration="2s">
-							<div class="row">
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-amount">
-										<h2>$12<span>/month</span></h2>
-									</div>
-								</div>
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-icon">
-										<img src="./img/price/start.svg" alt="" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-									<div class="price-item-list">
-										<h6>All Monthly Plans Incluide</h6>
-										<ul>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>3 Marketplaces</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Resizer & Editor</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Hosting</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Inventory Page</span>
-											</li>
-										</ul>
-										<p class="price-subscribe-btn">
-											<a href="#">Subscribe Now</a>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
-						<div class="price-item wow zoomIn" data-wow-duration="2s">
-							<div class="row">
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-amount">
-										<h2>$20<span>/month</span></h2>
-									</div>
-								</div>
-								<div class="col-xl-6 col-lg-6 col-md-12 col-sm-6 col-6">
-									<div class="price-icon">
-										<img src="./img/price/start.svg" alt="" />
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-									<div class="price-item-list">
-										<h6>All Monthly Plans Incluide</h6>
-										<ul>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>3 Marketplaces</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Resizer & Editor</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Hosting</span>
-											</li>
-											<li>
-												<img src="./img/price/check.png" alt="" />
-												<span>Inventory Page</span>
-											</li>
-										</ul>
-										<p class="price-subscribe-btn">
-											<a href="#">Subscribe Now</a>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
-    <!-- Pricing end -->
-
 
     <!-- Newsletter Start -->
     <section class="newsletter" id="contact">
@@ -528,8 +351,14 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-6">
-                                <h3>Stay Tuned !</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <div class="newsletter-content">
+                                    <h3>Stay Tuned !</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <form>
+                                        <input type="email" placeholder="Email here" class="form-control" />
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
