--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-6 banner-content-colum col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-xl-6 banner-content-colum col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="banner-content  wow slideInLeft">
                             <h1>Find Your <br /> Best Match
 
@@ -81,7 +81,7 @@
 							<a class="success-story" href="#">Our Success Stories</a>
 							</div>
 							</div>
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="banner-img">
 
                                     <img class="banner-img-main" src="./img/bg/banner.png" alt="" />
@@ -105,7 +105,7 @@
             <div class="feature-area">
                 <div class="container p-0">
                     <div class="row feature-row">
-                        <div class="col-xl-4 feature-list-colum col-lg-4 col-md-4 col-sm-6">
+                        <div class="col-xl-4 feature-list-colum col-lg-4 col-md-4 col-sm-6 col-12">
                             <div class="feature-list couple">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M6.59891 16.2017C7.92423 16.2017 8.99861 15.1274 8.99861 13.802C8.99861 12.4767 7.92423 11.4023 6.59891 11.4023C5.2736 11.4023 4.19922 12.4767 4.19922 13.802C4.19922 15.1274 5.2736 16.2017 6.59891 16.2017Z" stroke="#418BFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -120,7 +120,7 @@
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum eu lacinia </p>
                             </div>
                         </div>
-						<div class="col-xl-4 feature-list2 feature-list-colum col-lg-4 col-md-4 col-sm-6">
+						<div class="col-xl-4 feature-list2 feature-list-colum col-lg-4 col-md-4 col-sm-6 col-12">
                             <div class="feature-list ">
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M13.6667 7.83398C13.0542 7.83398 12.4567 8.11065 12 8.53898C11.5433 8.11065 10.9458 7.83398 10.3333 7.83398C8.33917 7.83398 7 9.17315 7 11.1665C7 14.0557 11.1033 16.6007 11.5708 16.8807C11.7033 16.9607 11.8517 16.9998 12 16.9998C12.1483 16.9998 12.2967 16.9607 12.4292 16.8807C12.8975 16.5998 17 14.0548 17 11.1665C17 9.17315 15.6608 7.83398 13.6667 7.83398ZM12 15.1757C10.815 14.3715 8.66667 12.6157 8.66667 11.1665C8.66667 10.6657 8.82917 9.50065 10.3333 9.50065C10.7075 9.50065 11.1667 9.95982 11.1667 10.3332C11.1667 10.7932 11.54 11.1665 12 11.1665C12.46 11.1665 12.8333 10.7932 12.8333 10.3332C12.8333 9.95982 13.2925 9.50065 13.6667 9.50065C15.1708 9.50065 15.3333 10.6657 15.3333 11.1665C15.3333 12.6148 13.185 14.3715 12 15.1757Z" fill="#418BFF"/>
@@ -134,7 +134,7 @@
 							<img class="arrow1" src="./img/icon/arrow1.png" alt="" />
 							<img class="arrow2" src="./img/icon/arrow2.png" alt="" />
                         </div>
-						<div class="col-xl-4 feature-list-colum col-lg-4 col-md-4 col-sm-6">
+						<div class="col-xl-4 feature-list-colum col-lg-4 col-md-4 col-sm-6 col-12">
                             <div class="feature-list">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M16.4966 19.9983C16.3763 19.9988 16.259 19.9613 16.1613 19.8912L11.5687 16.5616L6.97615 19.8912C6.87803 19.9623 6.75983 20.0004 6.63862 20C6.51741 19.9996 6.39948 19.9606 6.30189 19.8887C6.20429 19.8168 6.13208 19.7158 6.0957 19.6002C6.05931 19.4845 6.06064 19.3603 6.09949 19.2455L7.89066 13.9402L3.24846 10.7567C3.14791 10.6879 3.07202 10.5886 3.03188 10.4735C2.99173 10.3585 2.98945 10.2336 3.02535 10.1171C3.06125 10.0006 3.13345 9.89866 3.23142 9.82615C3.32938 9.75363 3.44796 9.71434 3.56985 9.71402H9.29689L11.0252 4.39513C11.0625 4.2803 11.1351 4.18021 11.2327 4.10922C11.3304 4.03824 11.448 4 11.5687 4C11.6894 4 11.807 4.03824 11.9047 4.10922C12.0023 4.18021 12.075 4.2803 12.1122 4.39513L13.8405 9.71581H19.5676C19.6896 9.71575 19.8085 9.75476 19.9067 9.82714C20.005 9.89952 20.0775 10.0015 20.1136 10.118C20.1497 10.2346 20.1476 10.3596 20.1075 10.4749C20.0674 10.5902 19.9914 10.6896 19.8907 10.7585L15.2468 13.9402L17.0369 19.2441C17.0659 19.33 17.074 19.4215 17.0607 19.5112C17.0473 19.6008 17.0128 19.686 16.96 19.7597C16.9072 19.8333 16.8377 19.8934 16.7571 19.9349C16.6765 19.9764 16.5872 19.9981 16.4966 19.9983Z" fill="#418BFF"/>
@@ -158,12 +158,12 @@
     <section class="relationship" id="relationship">
         <div class="container relationship-container">
             <div class="row relationship-row">
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12  relationship-colum">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12  relationship-colum">
                     <div class="relationship-img wow zoomIn" data-wow-duration="2s">
                         <img src="./img/feature/relationship.png" alt="" />
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 d-flex align-items-center">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 d-flex align-items-center">
                     <div class="relationship-content wow zoomIn" data-wow-duration="2s">
 
                         <h2>We belive in <br/> loyal relationship </h2>
@@ -182,7 +182,7 @@
             <div class="container how-work-container">
                 <div class="row how-work-row">
 
-                    <div class="col-xl-6 col-lg-6 col-md-6 d-flex align-items-center">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-12 d-flex align-items-center">
                         <div class="how-work-content wow zoomIn" data-wow-duration="2s">
 
                             <h2>How The App <br/> will work</h2>
@@ -210,7 +210,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+                <div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
                     <div class="price-list-shadow">
                         <div class="price-list">
                             <h3>Standard</h3>
@@ -225,7 +225,7 @@
                     </div>
 
                 </div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
                     <div class="price-list-shadow">
                         <div class="price-list">
                             <h3>Basic</h3>
@@ -240,7 +240,7 @@
                     </div>
 
                 </div>
-				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
+				<div class="col-xl-4 col-lg-4 col-md-4 col-sm-6 col-12">
                     <div class="price-list-shadow">
                         <div class="price-list">
                             <h3>Premium</h3>
@@ -267,7 +267,7 @@
             <div class="container social-work-container">
                 <div class="row social-work-row">
 
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="social-work-content wow zoomIn" data-wow-duration="2s">
 
                             <h2>Relationship on <br/> our social network </h2>
@@ -364,7 +364,7 @@
                 <div class="newsletter-area">
                     <div class="container">
                         <div class="row">
-                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="newsletter-content">
                                     <h3>Stay Tuned !</h3>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
